tests/neg/summon-function.scala
object Test {
  summon[Int => String] // error
}
