tests/neg/summon-function.check
-- Error: tests/neg/summon-function.scala:2:23 -------------------------------------------------------------------------
2 |  summon[Int => String] // error
  |                       ^
  |                       No implicit view available from Int => String.
